# Empathetic-Chatbot

./: .gitignore  Empathetic_Chatbot.ini  README.md  manage.py  pyproject.toml  requirements.txt
Empathetic_Chatbot/: asgi.py  settings.py  urls.py  wsgi.py
bot/: eval.py  load_data.py  models.py  saved_data.csv  saved_data.json  streamlit.py  views.py
bot/.streamlit/: config.toml  secrets.toml
bot/data/: load.py
bot/templates/bot/: index.html
src/empathetic_chatbot/: __init__.py
static/: script.js
