[project]
name = "empathetic-chatbot"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.1.3",
    "drf-yasg>=1.21.8",
    "openai>=1.55.0",
    "streamlit>=1.40.1",
    "watchdog>=6.0.0",
    "scipy>=1.14.1",
    "datasets>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/empathetic_chatbot"]
